--- a/2010/thesis/elastic.tex
+++ b/2010/thesis/elastic.tex
@@ -16,18 +16,18 @@ ATLAS ALFA, TDR
 \chapter[el]{Elastic scattering of protons}
 
 
-\fig{fig/pdf/el_scat_scheme.pdf}{el scat scheme}{The kinematical of equal-mass elastic scattering in the center-of-mass system. The labels give the four-momenta of the particles involved ($z$ axis is horizontal, $x$ vertical).}
+\fig{fig/pdf/el_scat_scheme.pdf}{el scat scheme}{The kinematics of equal-mass elastic scattering in the center-of-mass system. The labels give the four-momenta of the particles involved ($z$ axis is horizontal, $x$ vertical).}
 
-Let us start by defining our notation and terms used later on. A scattering of particles with equal mass $m$ in the center-of-mass (CMS) frame is sketched in \Fg{el scat scheme}. $E$ and $p$ stand for the CMS energy and momentum (we will always assume kinematics quantities are evaluated in the CMS frame, unless stated differently). $\th$ is the scattering angle in the CMS frame. The total scattering energy squared reads:
-\eqref{s = 4E^2 = 4p^2 - 4m^2 \approx 4p^2\ ,}{el s}
+Let us start by defining our notation and terms used later on. A scattering event of particles with equal mass $m$ in the center-of-mass (CMS) frame is sketched in \Fg{el scat scheme}. $E$ and $p$ stand for the CMS energy and momentum (we will always assume kinematic quantities to be evaluated in the CMS frame, unless stated differently). $\th$ is the scattering angle in the CMS frame. The total scattering energy squared reads:
+\eqref{s = 4E^2 = 4p^2 + 4m^2 \approx 4p^2\ ,}{el s}
 where the last approximation holds in \em{high-energy} limit
 \eqref{{m\over p}\to 0\ ,}{el high energy}
-which will be often used. The four-momentum transfer squared (we will often use abbreviation momentum transfer) can be expressed:
+which will be often used. The four-momentum transfer squared (we will often use the abbreviation momentum transfer) can be expressed as:
 \eqref{t = -2p^2 (1 - \cos\th) \approx -(p\th)^2\ .}{el t}
-The last step is valid in \em{low-scattering-angle} limit
+The last step is valid in the \em{low-scattering-angle} limit
 \eqref{\th\to 0\qquad\hbox{or equivalently}\qquad {t\over p^2}\to 0\ .}{el low angle}
-The definition \Eq{el t} sets bounds to the four-momentum transfer:
-\eqref{t_{\rm min} \le t \le 0\ ,\qquad t_{\rm min} = 4p^2 \approx s\ ,}{el t min}
+The definition \Eq{el t} sets bounds on the four-momentum transfer:
+\eqref{t_{\rm min} \le t \le 0\ ,\qquad t_{\rm min} = - 4p^2 \approx -s\ ,}{el t min}
 where again the high-energy approximation has been used in the last relation.
 
 In principle, one more parameter (for example the azimuthal angle $\ph$ giving the rotation about the scattering axis $z$) is needed to fully describe an elastic scattering event. However, the azimuthal symmetry will be assumed throughout this chapter. Thereby the $\ph$-distribution will be trivially flat and we will not even mention it.
@@ -69,7 +69,7 @@ At present, the QCD is believed to be the best theory of strong interactions ava
 
 The authors picture the proton in an effective QFT model. They proposed a soliton solution with a mass comparable to the one of proton. This soliton divides the proton into two distinct layers: an outer cloud of quark-antiquark condensate and an inner core of topological charge. Later on, a third, the inner-most layer has been added -- a valence-quark bag. These three layers give rise to three mechanisms contributing to elastic proton-proton scattering. Each of them drives the amplitude in a range of momentum-transfer $t$.
 
-For the lowest $|t|$ values ($\ls 0.5\un{GeV^2}$ at LHC energies) it is the diffraction scattering, originating from a glancing overlapping of the outer clouds. The corresponding scattering amplitude is formulated in the eikonal approach (see e.g. Ch.~6 in \bref{barone}), with a Gaussian-like profile function. For higher $|t|$ values (up to $\approx 5\un{GeV^2}$ at LHC energies) the leading mechanism is the core-core scattering. The QFT model suggests that it is mediated by the $\rm\om$ meson, behaving as an elementary particle (not like a Regge pole in many other models). For even higher values of $|t|$, the scattering is probing the inner-most layer of valence quarks. Their spatial distribution is assumed to fall off exponentially as departing from nucleon's center. There are two alternatives for the interaction of two valence quarks. In the first one (we will refer to it as HP), the quarks interact via hard pomeron (gluon ladders in BFKL). In the second (LxG), the interaction is mediated by the low-$x$ gluons that surround the valence quarks.
+For the lowest $|t|$ values ($\ls 0.5\un{GeV^2}$ at LHC energies) it is the diffraction scattering, originating from a glancing overlapping of the outer clouds. The corresponding scattering amplitude is formulated in the eikonal approach (see e.g. Ch.~6 in \bref{barone}), with a Gaussian-like profile function. For higher $|t|$ values (up to $\approx 5\un{GeV^2}$ at LHC energies) the leading mechanism is the core-core scattering. The QFT model suggests that it is mediated by the $\rm\om$ meson, behaving as an elementary particle (not like a Regge pole in many other models). For even higher values of $|t|$, the scattering is probing the inner-most layer of valence quarks. Their spatial distribution is assumed to fall off exponentially as departing from the nucleon's center. There are two alternatives for the interaction of two valence quarks. In the first one (we will refer to it as HP), the quarks interact via a hard pomeron (gluon ladders in BFKL). In the second (LxG), the interaction is mediated by the low-$x$ gluons that surround the valence quarks.
 
 The model contains 19 parameters in the hard-pomeron version HP or 20 in the low-$x$ gluon version LxG.
 
@@ -85,9 +85,9 @@ The model comprises 16 free (fitted) parameters for the two pomeron variant or 2
 
 This is also an eikonal model. The eikonal has two components: from a pomeron exchange and a Regge background. The latter is described as an exchange of $\rm A_2$, $\rm \rh$ and $\rm \om$ trajectories, having the traditional energy dependence $s^{\al(t)}$ and exponential $t$-dependence. The Regge background is responsible for the difference between $\rm pp$ and $\rm\bar pp$ scattering at low energies, but is negligible for high (LHC) energies.
 
-The eikonal of the pomeron is assumed to factorize to an energy dependence and a dependence on impact parameter. The first is deduced from asymptotic QFT behavior \bref{wu70}. The latter is implied from the assumption of similar distributions of the electric charge and the hadronic matter in the nucleon. The charge distribution is extracted from the electromagnetic form factor (a dipole parameterization is used). The hadronic matter distribution is then obtained by correcting by a slowly-varying function (of $t$).
+The eikonal of the pomeron is assumed to factorize to an energy dependence and a dependence on impact parameter. The first is deduced from asymptotic QFT behavior \bref{wu70}. The latter is implied from the assumption of similar distributions of the electric charge and the hadronic matter in the nucleon. The charge distribution is extracted from the electromagnetic form factor (a dipole parameterization is used). The hadronic matter distribution is then obtained by correcting with a slowly-varying function (of $t$).
 
-Thanks to this construction, the model can be easily extended to describe other scattering processes such as $\rm \pi p$ or $\rm Kp$. The only change is the to replace a form factor of the proton by a form factor of another particle.
+Thanks to this construction, the model can be easily extended to describe other scattering processes such as $\rm \pi p$ or $\rm Kp$. The only change is to replace the form factor of the proton by a form factor of another particle.
 
 The model has 18 parameters in total (for $\rm pp$ and $\rm \bar p p$ interactions), however, only 6 of them are relevant for high energy scattering.
 
@@ -95,7 +95,7 @@ The model has 18 parameters in total (for $\rm pp$ and $\rm \bar p p$ interactio
 
 This model is a QCD-inspired, eikonal-formulated model. Similarly to the previous models, the eikonal receives two contributions. One that controls high energy behavior (the authors call it even) and one responsible for the difference between $\rm pp$ and $\rm\bar pp$ scattering at low energies.
 
-The even eikonal has three components accounting for quark-quark, quark-gluon and gluon-gluon interactions. Each of them takes a form with factorized energy dependence (proportional to the integral cross-section of that interaction at a given energy) and impact-parameter dependence. The latter is parameterized as the Fourier transform of a dipole form factor, with the control parameter given by the ``area'' of the nucleon occupied by the partons. The quark-gluon cross-section is assumed to rise logarithmically with energy, the quark-quark cross-section has a constant and a $1/\sqrt s$ contributions. The gluon-gluon cross-section is deduced from the gluonic structure functions of the nucleon.
+The even eikonal has three components accounting for quark-quark, quark-gluon and gluon-gluon interactions. Each of them takes a form with factorized energy dependence (proportional to the integral cross-section of that interaction at a given energy) and impact-parameter dependence. The latter is parameterized as the Fourier transform of a dipole form factor, with the control parameter given by the ``area'' of the nucleon occupied by the partons. The quark-gluon cross-section is assumed to rise logarithmically with energy, the quark-quark cross-section has a constant and a $1/\sqrt s$ contribution. The gluon-gluon cross-section is deduced from the gluonic structure functions of the nucleon.
 
 The authors extend the model to $\rm\ga p$ and $\rm\ga\ga$ interactions, by proposing that the photon behaves as a quark-antiquark system in strong interactions.
 
@@ -103,7 +103,7 @@ The model has 12 parameters in total, 5 of them control the high-energy behavior
 
 \section[el pred]{Predictions for the LHC}
 
-We have implemented the aforementioned models as a computer program (see the description of the Elegent package \Sc{elegent}), which allowed us to calculate predictions for the LHC energies -- we will use values of $\sqrt s = 7$ and $14\un{TeV}$ as a representative sample.
+We have implemented the aforementioned models in a computer program (see the description of the Elegent package \Sc{elegent}), which allowed us to calculate predictions for the LHC energies -- we will use values of $\sqrt s = 7$ and $14\un{TeV}$ as a representative sample.
 
 We recall that all results presented in this section are due to the strong interaction only. The influence of the electromagnetic force will only be discussed in the following section.
 
@@ -113,13 +113,13 @@ The first quantity to look at is the differential cross-section. It is shown in 
 
 \fig{fig/pdf/el_mod_dsdt_large.pdf}{el mod dsdt large}{Differential cross-section as predicted by the four models, in the $|t|$ range $0$ to $20\un{GeV^2}$.}
 
-\TODO{ref to TOTEM measurement}
+\TODO{ref to TOTEM measurement} \Fg{ttm mod cmp dsdt}
 
 We have already said that all models predict almost exponential decrease of the cross-section for the lowest $|t|$ values. To evaluate this statement more precisely, it is useful to plot the exponential slope
 \eqref{B(t) = {\d\over \d t} \log {\d\si\over\d t}(t) = {\d\over \d t} \log |F(t)|^2\ .}{el B}
-Considering the total variation of the slope $B(t)$ roughly from $-10$ to $30\un{GeV^2}$, the slope for $|t|$ values below the first dip could be thought of constant. But still, there are non-negligible variations. The highest slope is reached by the model of Islam et al. at $t=0\un{GeV^2}$ ($28$ and $31\un{GeV^{-2}}$ for $7$ and $14\un{TeV}$ respectively). For the other models, the slope has approximately a parabolic shape reaching the maximum just before the first dip and having the minimum on a half way. For both energies the lowest values are reached by the model of Bourrely et al. ($17.6$ and $18.9\un{GeV^{-2}}$), the highest by Block et al. ($24.7$ and $28.5\un{GeV^{-2}}$ for $7$ and $14\un{TeV}$ respectively).
+Considering the total variation of the slope $B(t)$ roughly from $-10$ to $30\un{GeV^{-2}}$, the slope for $|t|$ values below the first dip could be thought of constant. But still, there are non-negligible variations. The highest slope is reached by the model of Islam et al. at $t=0\un{GeV^2}$ ($28$ and $31\un{GeV^{-2}}$ for $7$ and $14\un{TeV}$ respectively). For the other models, the slope has approximately a parabolic shape reaching the maximum just before the first dip and having the minimum on a half way. For both energies the lowest values are reached by the model of Bourrely et al. ($17.6$ and $18.9\un{GeV^{-2}}$), the highest by Block et al. ($24.7$ and $28.5\un{GeV^{-2}}$ for $7$ and $14\un{TeV}$ respectively).
 
-The exponential slope is also useful for a localization of the dips/shoulders. A dip occurs whenever the slope crosses zero value (dotted line in the \Fg{el mod B}) from positive to negative values. When the slope gets close but does not cross zero actually (e.g. Islam et al. at $7\un{TeV}$), it signifies a shoulder.
+The exponential slope is also useful for a localization of the dips/shoulders. A dip occurs whenever the slope crosses zero value (dotted line in the \Fg{el mod B}) from positive to negative values. When the slope gets close or reaches zero but does not cross it actually (e.g. Islam et al. at $7\un{TeV}$), it signifies a shoulder.
 
 \fig{fig/pdf/el_mod_B.pdf}{el mod B}{The elastic slope as predicted by the four models.}
 
