detector app. updated
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@5135 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -14,26 +14,18 @@ The TOTEM experiment \bref{totem04,totem08,totem10} is dedicated to measurement 
 \> a study of soft and hard diffraction.
 
 
-We have discussed theoretical/phenomenological description of the elastic scattering in \Sc{el}. Looking at the model predictions in \Fg{el mod dsdt large}, one can see differences of several orders of magnitude. TOTEM plans to measure the differential cross-section in the $|t|$-range from about $10^{-3}\un{GeV^2}$ (the domain of Coulomb-hadronic interference) to more than $10\un{GeV^2}$. This large coverage can be achieved by exploiting several running scenarios -- see the end of \Sc{rp measurement}. \TODO{decisive measurement}
+We have discussed theoretical/phenomenological description of the elastic scattering in \Sc{el}. Looking at the model predictions in \Fg{el mod dsdt large}, one can see differences of several orders of magnitude. TOTEM plans to measure the differential cross-section in the $|t|$-range from about $10^{-3}\un{GeV^2}$ (the domain of Coulomb-hadronic interference) to more than $10\un{GeV^2}$. This large coverage can be achieved by exploiting several running scenarios -- see the end of \Sc{rp measurement}. \TODO{The aimed precision is such that TOTEM will be able to confirm or rule out the model predictions and thus focus the direction of the theoretical research.}
 
 As much as the model predictions differ for the elastic cross-section, they differ for the total-cross section. From Tb.~2 in \bref{kklp11} one can read a variation between $95$ and $110\un{mb}$. Extrapolations from lower energy measurements, see \Fg{sigma tot}, yield even higher uncertainty: from about $85\un{mb}$ to $120\un{mb}$. TOTEM plans to measure the total cross-section with the luminosity independent method, see \Sc{ttm tcs} for details. This method takes as an input the elastic and inelastic event rates and thus is closely related to the other two points of the physics programme. TOTEM aims at the final precision about $1\percent$, which would provide a decisive answer to many total-cross-related hypothesis.
 
-\Fg{ttm processes} shows typical event topologies for certain diffractive-process classes that TOTEM plans to measure. Looking at the cross-section estimates, one can see that these processes form a large part of the total cross-section. A characteristic property of these processes is the presence of scattering products at very forward directions. Using the definition of pseudorapidity
-\eqref{\et = - \log \tan {\th\over 2}}{pseudorapidity}
-the one can say the presence of products at high pseudorapidity regions. \TODO{...}
+\Fg{ttm processes} shows typical event topologies for certain diffractive-process classes that TOTEM plans to measure. Looking at the cross-section estimates, one can see that these processes form a large part of the total cross-section. A characteristic property of these processes is the presence of scattering products at very forward directions. Using the definition of pseudorapidity ($\th$ denotes the scattering angle)
+\eqref{\et = - \log \tan {\th\over 2}\ ,}{pseudorapidity}
+it can be rephrased as the presence of scattering products at high pseudorapidity regions. \TODO{...}
 
 \fig{fig/pdf/ttm_processes.pdf}{ttm processes}{Diffractive process classes with a cross-section estimate for the center-of-mass energy $\sqrt s = 14\un{TeV}$. For each class there are two types of diagrams (using the same color code). Left: a Feynman-like diagram showing the nature of the process, with Pomeron exchange (the double lines) as an effective description of the diffraction phenomena. Single external lines denote protons, the tripled outgoing lines represent proton dissociation. Right: a sample hit map in the pseudorapidity ($\et$) vs.~azimuthal angle ($\ph$) space.}
 
 
-\> why about detectors:
-
-TOTEM's physics programme thus sets special requirements for the detector apparatus. In particular large rapidity coverage - to detect most fragments from inelastic collisions and excellent acceptance for outgoing elastic and diffractive protons. To accomplish this task, TOTEM comprises three sub-detectors: the telescopes T1 and T2 to detect products of inelastic collisions and a system of Roman Pots (RP) for surviving proton detection.
-
-Telescopes -- inelastic trigger, vertex reconstruction (background rejection), high radiation
-
-All detectors are trigger capable -- important for 
-
-RP motivation: very small angles -- need move close to the beam and detectors far from the IP, instable beams in the beginning, must be movable
+TOTEM's physics programme thus sets special requirements for the detector apparatus. In particular large rapidity coverage - to detect most fragments from inelastic collisions and excellent acceptance for outgoing elastic and diffractive protons. To accomplish this task, TOTEM comprises three sub-detectors: the \em{telescopes T1 and T2} and a system of \em{Roman Pots} (RPs). The role of the telescopes is to detect the products of inelastic collisions. They are able to reconstruct many tracks per event and extrapolate them to the interaction point. This is essential for background rejection. The telescopes were designed to stand the high radiation load expected at their location. The role of the RP system is to detect the surviving protons. As indicated in \Fg{ttm processes}, these are scattered to very low angles. That is why the RPs are installed far from the IP (scattered protons can gain larger elongations from the beam) and can be approached very close to the beam (to detect protons with small elongation, that is with small scattering angles). For safety reasons, no detectors are allowed to be inside the beam-pipe before the beam is stable. This means that the RPs must be movable beam-pipe insertions, retracted to a safe position during beam fill and adjustments and approached close to the beam for measurements. All three sub-detectors are trigger capable which is essential for the total cross-section measurement.
 
 
 %\TODO{add the phi vs. eta diagram to explain the forwardness?}
@@ -44,9 +36,7 @@ RP motivation: very small angles -- need move close to the beam and detectors fa
 
 \section[ttm det]{Detector apparatus}
 
-\> how about detectors:
-
-\Fg{ttm det overview} shows an overview of the detector apparatus of TOTEM. All detectors are placed symmetrically about IP5 (which is shared with the CMS experiment). All detectors are trigger capable.
+\Fg{ttm det overview} shows an overview of the detector apparatus of TOTEM. All detectors are placed symmetrically about IP5 (which is shared with the CMS experiment). 
 
 \fig{fig/pdf/ttm_det_overview.pdf}{ttm det overview}{An overview of the TOTEM detectors. All detectors are installed symmetrically left (sector 45) and right (sector 56) of the interaction point 5 (IP5). Only the \rhs~is shown in the figure. Bottom part: the structure of the LHC around IP5. The vertical boxes represent quadrupole (Q) and dipole (D) magnets. D1 is the separation magnet -- splitting each beam to its proper beam-line, see the \rhs~of the figure. The RP stations at $147$ and $220\un{m}$ are shown by red dots (each dot represents a unit). Upper box: zoomed region (see the guiding dashed lines) around the IP5 -- the telescopes (red) T1 and T2 embedded into the CMS detector (gray). The T1 telescopes are installed inside the CMS end-caps, the T2 telescopes on the outer side of the CMS HF calorimeters.
 }
@@ -86,15 +76,7 @@ The GEM detectors are gaseous detectors where the electron multiplication is rea
 
 \caption{The RPs system}
 
-The system of Roman Pots (RPs) consists of four stations (see \Fg{ttm det overview})
-
-\> details in Ch.~4 in \bref{totem08}
-
-\>> break down with pictures, few info about the sensors, define hybrid
-\>> introduce (with pictures BPMs, BLMs, LVDTs)
-\>> define the standard naming: \bref{totem-rp-naming}
-
-%\fig[15cm]{fig/external/RP_stations_original.pdf}{s}{[7cm]RP stations}
+The system of Roman Pots (RPs) consists of four stations as shown in \Fg{ttm det overview}. Each station (see \Fg{rp station}) is formed by two units. Each unit includes horizontal, top and bottom RP and a Beam Position Monitor (BPM), see \Fg{rp unit}. A Roman Pot itself is shown in \Fg{rp pot}. In order to minimize the material budget in the path of detectable protons, the RP walls are replaced by the thin window around the sensors. Its front face is $500\un{\mu m}$ thick, the face exposed to the beam only $150\un{\mu m}$. Inside each RP, there is a detector package (DP), see \Fg{rp package}. It is package of 5 back-to-back mounted pairs of hybrids. A hybrid is an electronic board carrying an edgeless silicon sensor and four read-out (VFAT) chips, as shown in \Fg{rp hybrid}. Each RP station is followed by a series of Beam Loss Monitors (BLM), the role of which is to monitor the beam losses induced by the RP operations. One of the nearest BLMs is shown in \Fg{rp blm bpm}. Further details on the RP system can be found in Ch.~4 in \bref{totem08}.
 
 \bmfig
 \fig{fig/pdf/rp_station.pdf}{rp station}{[7.3cm]A RP station installed in the tunnel. The green frames show the two units (only top and horizontal pots are visible)}
@@ -112,34 +94,33 @@ The system of Roman Pots (RPs) consists of four stations (see \Fg{ttm det overvi
 \fig{fig/pdf/rp_blm_bpm.pdf}{rp blm bpm}{[7cm]A BPM and a BLM at a RP station. A piece of a top RP can be seen in the top-left corner. The beam pipes can be seen in the bottom-right corner (outgoing beam top, incoming bottom).}
 \emfig
 
-\> thin window: front face $500\un{\mu m}$, $150\un{\mu m}$ thick
+In order to minimize the distance between the RP edge facing the beam and the sensitive detector volumes, the RPs are equipped with edgeless silicon detectors with current terminating structure (CTS). This structure consists two rings. The current terminating ring collects the current generated in the highly damaged region at the cut edge (see \Fg{rp hybrid}), avoiding its diffusion into the sensitive volume. The clean-up ring prevents any further diffusion of this edge current into the sensitive area. With this technology the insensitive edge is reduced to about $50\un{\mu m}$.
 
-\> edgeless silicon detectors with current terminating structure, Sc.~4.3 in \bref{totem08}
-\>> current terminating ring (CTR) collects the current generated in the highly damaged region at the cut edge, avoiding its diffusion into the sensitive volume, and is separated from the biasing electrode.
-\>> one more ring (clean-up ring CR) to prevent any further diffusion of this edge current into the sensitive area.
-\>> insensitive edge about $50\un{\mu m}$
+The silicon sensors are single-sided $\rm p^+$-$\rm n$ micro-strip detectors with $512$ strips at a pitch $P = 66\un{\mu m}$, processed on very high resistivity
+%($> 10\un{k\Om\ cm}$)
+$n$-type silicon wafers. The strips are oriented at $45^\circ$ with respect to the edge facing the beam (the cut edge). The biasing voltage is of the order of $100\un{V}$. For better performance, the sensors are cooled down to a temperature about $-10^\circ\rm C$. The $512$ strip are read out by four VFAT chips (see \bref{vfat}), that is $128$ channels each. For more details on the silicon sensors, we refer the reader to Sc.~4.3 in \bref{totem08}.
 
-\> single-sided $\rm p^+-n$ micro-strip detectors with $512$ strips at a pitch $P = 66\un{\mu m}$ processed on very high resistivity n-type silicon wafers $> 10\un{k\Om\ cm}$
-\>> strips at $45^\circ$ wrt.~the edge facing the beam.
-\>> bias voltage $\approx 100\un{V}$ ??
-\>> temperature $\approx -10^\circ\rm C$
+In order to refer to any component of the RP system a naming scheme was defined in \bref{totem-rp-naming}. Since we will use it in what follows, we summarize the scheme in \Tb{rp naming scheme}. For example, the 2nd plane in the near horizontal RP in the $220\un{m}$ station in the right arm can be referred as 56-220-near-hor-2.
 
-\> read out per 128 channels by 4 VFAT chips
-
-\tab[\strut\quad#\quad\hfil&\quad#\quad\hfil&\quad#\quad\hfil\cr]{rp naming schemes}{The RP naming scheme.}{\ln
-arm		& 45 (=left), 56 (=right)		\cr
-station	& 147, 220		\cr
-unit	& far, near		\cr
-pot		& top, bot = bottom, hor = horizontal	\cr
-plane	& 1 to 10		\cr
-vfat	& 1 to 4		\cr
-strip	& 0 to 127		\cr
+\tab[\bstrut\qquad#\quad\hfil&\quad#\quad\hfil&\quad#\qquad\hfil\cr]{rp naming scheme}{The RP naming scheme. Far and near is to be understood with respect to the interaction point. Plane 1 is the nearest one to IP.}{\ln
+sector (arm)	& 45 (left), 56 (right)		\cr
+station			& 147, 220		\cr
+unit			& far, near		\cr
+pot				& top, bot = bottom, hor = horizontal	\cr
+plane (sensor)	& 1 to 10		\cr
+vfat			& 1 to 4		\cr
+strip			& 0 to 127		\cr
 \ln
 }
 
-\>> give idea about the dimensions (for reference reasons later), + spacing between sensors (total stack size), detector pitch, detector orientation
+In the following chapters we will make important considerations based on the proportions of the RP system components. That is why we review the important dimensions now. The sensors have the shape of a square (edge about $3.6\un{cm}$) with one corner cut off (the length of the cut edge is about $2.2\un{cm}$). The spacing between the sensors in a package is summarized in \Tb{ttm det package}. The total width of the package is about $4.1\un{cm}$. \Tb{ttm rp station} summarizes the RP distances from the interaction point. One can see that the length of the $220\un{m}$ ($147\un{m}$) station is about $5.4\un{m}$ ($1.7\un{m}$).
 
-\htab{ttm rp station}{The $s$ positions of the RP centers, in meters from the IP5.}{
+\htab{ttm det package}{The longitudinal positions (along the beam axis) of the silicon sensors in a detector package, in millimeters and relative to the center of the RP.}{\bln
+\hbox{sensor/plane}	& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \cr\bln
+\hbox{position}		& -20.3 & -15.7 & -11.3 & -6.7 & -2.3 & 2.3 & 6.7 & 11.3 & 15.7 & 20.3 \cr\bln
+}
+
+\htab{ttm rp station}{The distances (in meters) of the RP centers from the IP5.}{
 \omit&\multispan6\bhrulefill\cr
 \omit&\multispan3\strut\bvrule\hfil near unit\hfil&\multispan3\vrule\hfil far unit\hfil\cr
 \omit&\multispan6\bhrulefill\cr
@@ -148,19 +129,17 @@ strip	& 0 to 127		\cr
 \hbox{220 m station} & 214.628 & 214.628 & 215.078 & 219.550 & 220.000 & 220.000 \cr\bln
 }
 
-\htab{ttm det package}{The positions of silicon sensors in a detector package (relative to the center of a RP). In milimeters. Sensor 1 is the nearest to the IP5.}{\bln
-\hbox{sensor}	& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \cr\bln
-\hbox{position}	& -20.3 & -15.7 & -11.3 & -6.7 & -2.3 & 2.3 & 6.7 & 11.3 & 15.7 & 20.3 \cr\bln
+\Fg{rp station 3d} shows the geometry of the RP stations. It defines the $xyz$ coordinate system which is bound to the station. The $z$ axis overlaps with the beam axis, the horizontal $x$ axis points outside the LHC ring and the $y$ axis points up (against gravity). We have also defined $U$ and $V$ directions, which are obtained by rotating the $x$ and $y$ directions by $45^\circ$. The $U$ and $V$ directions are useful since they describe the read-out and/or strip directions of the silicon sensors. Besides these two coordinate systems, the figure shows a number of $uv$ reference frames. Each of them is bound to a sensor. Its origin overlaps with the center of the sensor, the $u$ axis is parallel to the strips, the $v$ axis is perpendicular to them and hence gives the \em{read-out direction}. Due to the back-to-back sensor assembly, the odd and even planes have the $u$ and $v$ axes swapped. A similar situation takes place for the sensors' center offsets (red arrows, about $0.5\un{mm}$) from the package axes (dotted lines).
+
+Later on, we will call \em{$V$ sensors} all sensors which have their (nominal -- neglecting misalignment) read-out directions parallel or anti-parallel to the $V$ direction. For $U$ sensors analogically.
+
+
+\fig[14cm]{fig/pdf/rp_station_3d.pdf}{rp station 3d}{The geometry of RP stations (only the first two planes/sensors of the 56-220-near unit are drawn). The proportions have been modified for graphical reasons, they are not in scale. The blue line marks the beam axis. The red arrows mark the offsets of sensors' centers from the package axes (slightly inclined dotted lines). The $v$ vectors give the read-out directions. The green lines show the distances between sensors' cut edges and the beam axis.
 }
 
-In 56, top pots, V sensors shifted in x by +0.514mm, U sensors by -0.514mm.
+Since the RPs are movable, each RP module includes a Linear Voltage Differential Transformator (LVDT), a device which can determine the approach of the RP to the beam. These devices are calibrated to give the distance between the top/bottom face of the thin window (see \Fg{rp pot}) and the beam axis. If the gap between the thin window and the sensor's edges is known, one can calculate the distances from the beam to the sensor's cut edges (green lines in \Fg{rp station 3d}). These are the quantities relevant for the track reconstruction.
 
-\> define u, v (the system rotating with sensor) and U, V (45 deg. rotation of about s of the xys system), strips along u, read-out direction is v
-\TODO{make sure this is used everywhere}
-
-\fig[12cm]{fig/pdf/ttm_station_3d.pdf}{ttm station 3d}{[7cm]}
-
-\> RP approach -- typical $10\si$, define beam sigma!
+%\> RP approach -- typical $10\si$, define beam sigma!
 
 
 
